fix save de fichier dans un docker

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/croqueurdepommeBD
 spring.datasource.username=backend_user
 spring.datasource.password=Mdp123456789!
 #
+app.upload.dir=./uploads
 #
 # JPA / Hibernate configuration
 #
