--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -7,6 +7,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 #
 # JPA / Hibernate configuration
 #
+app.upload.dir=${APP_UPLOAD_DIR}
 app.secret.key=${APP_SECRET_KEY}
 app.token.expiration=3600000
 #
