fix save de fichier dans un docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,6 +12,9 @@ COPY .mvn/ .mvn/
 RUN --mount=type=bind,source=pom.xml,target=pom.xml \
     --mount=type=cache,target=/root/.m2 ./mvnw dependency:go-offline -DskipTests
 
+WORKDIR /app   
+RUN mkdir -p /app/uploads && chmod -R 777 /app/uploads
+
 ################################################################################
 
 FROM deps as package
